[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "runlocal_tools" # Replace with your package name
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" }, # Replace with your details
]
description = "A small example package" # Replace with your description
readme = "README.md"
requires-python = ">=3.8" # Specify your Python version requirement
dependencies = [
    "pillow",
    "coremltools",
    "torch",
    "numpy",
    "pydantic"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose your license
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/my_python_package" # Replace with your repo URL
"Bug Tracker" = "https://github.com/yourusername/my_python_package/issues" # Replace

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
] 